--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "chalk": "^4.1.0",
     "body-parser": "^1.20.2",
+    "chalk": "^4.1.0",
     "express": "^4.18.2",
     "magic-string": "^0.30.0",
     "minecraft-data": "^3.31.0",
@@ -18,9 +18,8 @@
     "prismarine-item": "^1.12.1",
     "prismarine-nbt": "^2.2.1",
     "prismarine-recipe": "^1.3.1",
+    "prismarine-viewer": "^1.25.0",
     "typescript": "^4.9.5",
     "vec3": "^0.1.8"
-  },
-  "devDependencies": {
   }
 }
